# Lezioni-CPP-Zuliani-2020

./: CMakeLists.txt
Exercises/Exercise 01/: Main.cpp
Exercises/Exercise 02/: Main.cpp
Exercises/Exercise 03/: Main.cpp
Exercises/Exercise 04/: Main.cpp
Exercises/Exercise 05/: Main.cpp
Exercises/Exercise 06/: Main.cpp
Exercises/Exercise 07/: Main.cpp
Exercises/Exercise 08/Home/: Casa.cpp  Casa.h
Exercises/Exercise 08/People/: Docente.h
Exercises/Exercise 09/: Main.cpp  Stage.cpp  stage.h
Exercises/Exercise 10/: Main.cpp
Exercises/Exercise 10 (TODO 2)/: Main.cpp
Exercises/Exercise 10 (TODO 2)/People/: Docente.cpp  Docente.h  Persona.cpp  Persona.h  Studente.cpp  Studente.h
Exercises/Exercise 10/Home/: Casa.cpp  Casa.h
Exercises/Exercise 10/People/: Docente.cpp  Docente.h  Persona.cpp  Persona.h  Studente.cpp  Studente.h
Exercises/Exercise 12/: Main.cpp  Telefono.cpp  Telefono.h
Exercises/Exercise 13/: Main.cpp  Smartphone.cpp  Smartphone.h  Telefono.cpp  Telefono.h
Exercises/Exercise 14/: Ciambellone.cpp  Ciambellone.h  Cioccolatino.cpp  Cioccolatino.h  Dolce.cpp  Main.cpp  Merendina.cpp  Merendina.h
Exercises/Exercise 14 (TODO 3)/: Ciambellone.cpp  Ciambellone.h  Dolce.h  Merendina.cpp  Merendina.h
Exercises/Exercise 15/: Main.cpp
Exercises/Exercise 15-16/: Locale.cpp  Locale.h
Exercises/Exercise 17/: Float2.cpp  Float2.h  Main.cpp
Lessons/: Project01.cpp  Project02.cpp  Project05.cpp  Project08.cpp  Project09.cpp  Project10.cpp  Project11.cpp  Project12.cpp  Project14.cpp  Project15.cpp  Project16.cpp  Project17.cpp  Project18.cpp  Project19.cpp  Project20.cpp  Project21.cpp
Lessons/Lesson 03/: Project03.cpp
Lessons/Lesson 04/: Project04.cpp
Lessons/Lesson 06/: Project06.cpp
Lessons/Lesson 07/: Project07.cpp
Lessons/Lesson 12/: Project12.cpp
Lessons/Lesson 13/: Project13.cpp
Lessons/Lesson 21/: Project21.cpp
